<resources>
    <string name="app_name">Animal Lover</string>
    <string name="new_user_sign_here">New User?    <u>SIGN UP</u> Here</string>
    <string name="already_registered_login_here">Already Registered? <u>Login here</u> </string>
    <string name="doing_great_work">Help the Animals\n If you love them</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">This guide will help you setup\n everything about Animal Lover</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="typesfoodcat">
         1.Dry food diet\n
        2.Wet food diet\n
        3.Renal diet\n
        4.Gastrointestinal health diets\n
        5.High energy diet\n

    </string>
    <string name="typesmedicinecat">
         1.Fluids for Cats\n
        2.Digestive Disorder Products for Cats\n
        3.Hormone Replacement or Inhibition for Cats\n
        4.Heart and Blood Pressure Drugs for Cats\n
        5.Bronchodilators for Cats\n

    </string>
    <string name="foodlistcat">
          1.Salmon\n
         2.Trout\n
         3.Herring\n
         4.Mackerel\n
         5.Tuna\n
         6.Whitefish\n
         7.Chicken\n
         8.Turkey\n
         9.Pheasant\n
         10.Beef\n

    </string>
    <string name="typesfoodbird">
        #1: Bird seed mixtures\n
        #2: Bird cake and food bars\n
        #3: Live foods and other insect foods\n
        #4: Breed your own mealworms\n
        #5: Household scraps for birds
    </string>
    <string name="typesfooddog">
        #1: Kibble/Dry\n
        #2: Canned\n
        #3: Semi-Moist\n
        #4: Home Cooked\n
        #5: Raw
    </string>
    <string name="foodlistdog">
       Top Food Names for Female Dogs:\n
        1.Ginger\n
        2.Pepper\n
        3.Cookie
        4.Cinnamon
        5.Snickers\n\n
        Top Food Names for Male Dogs\n
        1.Pickles\n
        2.Peanut\n
        3.Pepper\n
        4.Brownie\n
        5.Chip\n
    </string>
    <string name="when_your_pet_has_a_medical_condition_your_veterinarian_might_prescribe_one_or_more_medications_intended_to_manage_treat_or_cure_the_problem_although_there_are_some_veterinary_specific_drugs_many_of_the_drugs_used_in_veterinary_medicine_are_the_same_as_those_used_in_people_ata_medicine_er_vitor_deoa_lagbe_jeta_already_medicines_doc_file_deoa_ache_amra_kono_vabe_daye_thakbo_na_jekono_kisu_medicine_use_korar_agee_doctor_or_prescribe_hoa_lagbe">When your pet has a medical condition, your veterinarian might prescribe one or more medications intended to manage, treat or cure the problem. Although there are some veterinary-specific drugs, many of the drugs used in veterinary medicine are the same as those used in people. ata medicine er vitor deoa lagbe jeta already medicines doc file deoa ache ... amra kono vabe daye thakbo na . jekono kisu medicine use korar agee doctor or prescribe hoa lagbe</string>
    <string name="warning"><b>Warning- </b>As with any fresh food you offer your bird, remove and discard any leftovers a
        couple of hours after serving. This prevents bacteria growth inside of your pet’s cage. Take it easy on the grapes,
        however. They contain a lot of sugar. </string>
    <string name="warning2">
        <b>Warning- </b>Remember to never serve raw beans to your companion bird as they can be toxic unless cooked.
    </string>
    <string name="dog_food">"Dogs are usually carnivorous and eat almost all types of food. But wild dogs eat the flesh, bones, various organs and digested plants of other animals that prey on themselves. Although dogs are carnivores, they consume very small amounts of vegetable food for prey digestion.
        \n\nFeed good quality dry food or canned food according to the age and weight of the dog. These processed foods contain the right amount of nutrients. Dog food of different brands and flavors is available in the market and in different online shops. However, look at the expiration date on the food packet and try to feed premium food.
        \n\n\t\t •\tFeed Natural Foods. Such as: meat (beef, chicken, sheep, etc.), eggs, bones and various vegetable foods.
        \n\n\t •\tIf your dog has a problem with his teeth or gums, do not let him eat the bones. Bone can cause various gum and dental diseases. Playing too much bone can cause constipation and the bone should be large so that the whole bone does not get into the mouth.
        \n\n\t •\tOccasionally canned fish such as sardines, tuna, salmon, etc. can be fed as a treat  •\tOccasionally a small amount of boiled vegetables such as sweet pumpkin, carrot, broccoli, etc. can be fed.  •\tDogs can be fed rice or pasta mixed with boiled meat (without spices, onions, garlic).
        \n\n\t•\tLet the dog eat grass which acts as a vegetable substitute and helps digestion. Beware of chemical and poisonous plants.
        \n\n\t•\tThe amount of food depends on the size, breed, age, weight, exercise, etc. of the dog. However, it should be noted that extra food or very small amount of food should not be fed.
        \n\n\t•\tAdult dogs need to be fed twice a day. Exercise and walking should not be done just before and just after eating.
        \n\n\t•\tSome foods that should not be fed to dogs (toxic to dogs) are onions, garlic, chocolate, coffee and caffeine, avocado fruit, raw flour, yeast, grapes, raisins, nuts, fruit seeds or grains such as mango flour, avocado fruit Grains, raw tomatoes, mushrooms, daily fish, small bones, Xylitol (used instead of sugar in various foods), chewing gum, toothpaste, etc. "
    </string>
    <string name="fish_medicine_header">"Tropical fish medicine is used to treat tropical fish diseases. Tropical fish diseases can be caused by bacteria, fungus or by parasites. Commonly seen tropical fish diseases are Septicemia, Cotton Disease, Dropsy, Fin Rot, Ich, Swim bladder Infection, Pop Eye, Hole in the Head etc. Tropical fish medicine includes Antibiotics, Anti-fungals, Anti-parasitics.

    </string>
    <string name="medicine_fish_1">Praziquantel is known to be one of the safest most effective pond fish medications available for treating a vast array of external and internal parasites. It will not stress pond fish, damage filtration systems, or negatively affect the balance of your pond. One of the biggest advantages in large ponds is that water changes are not necessary and it only takes one treatment.  \n<b>How much:</b> 5 ml treats 25 gallons.  \n<b> How often:</b> One dose per treatment, repeat after 7 days if necessary. \n<b> How to: </b> Dilute liquid treatment in 1 gallon of pond water. Distribute evenly around the pond or add to an area with good circulation.</string>
    <string name="medicine_fish_2">Microbe-Lift Lice  Anchor Worm is the most effective treatment for diseases of fish caused by lice and anchor worms. When used as directed, it will not harm biological filtration and may be used on scaleless fish. Can be used in any water temperatures above 40º F. Should be stored in the original container above 40ºF and under 100ºF. Do not store in direct sunlight and do not allow to freeze.

    This product is intended for use with all ornamental pond fish. Not for use with fish or aquatic invertebrates intended for human consumption. Not for human or veterinary use.
    </string>
    <string name="medicine_fish_3">
        Microbe-Lift BSDT is the preeminent broad spectrum malachite green and formalin treatment. The only malachite green and formalin treatment that can be used in water temperatures as low as 50°F, thus allowing treatment in early Spring and late Fall.

Malachite green and formalin are two drugs that are more effective and less toxic in combination than when used individually. This is the definition of synergism. What makes Microbe-Lift BSDT the preeminent product in this field is the fact that it is formulated with malachite green chloride, instead of the more toxic oxalate salt. As with any malachite green and formalin treatment, do NOT use with other medications.
    </string>
    <string name="medicine_fish_4">
A unique, natural parasite repellant. Proven to work against bacterial dropsy, fungus and ulcers in fish. Expels pathogens from fish and stimulates its immune system response. Can speed up damaged tissue regeneration.

\n\nSabbactisun is made with plant and herbal extracts making it environmentally friendly. Supports immune system, driving off the excess parasites. Product is harmless to all nitrifying filter bacteria and aquatic plants

\n\n<b>Benefits:</b>
\n\n\t100% natural plant and herbal product
\n\tCompletely safe to use
\n\tNontoxic to animals and plants
\n\tProduct can be used during feeding
\n\tDoes not adversely affect either nitrifying filter bacteria or beneficial bacteria additives
\n\tNo significant reduction in the level of dissolved oxygen in the water
\n\tFully Biodegradable
\n\tSabbactisun and Parazoryne can be used 12 hours apart
    </string>
    <string name="medicine_fish_5">
Aqua MedZyme permanently reduces ALL strains of deadly ulcer causing Aeromonas, Pseudomonas in your pond by starving them to death. These deadly bacteria live in every koi fish pond, causing life threatening bacterial infections such as ulcers, fin rot, tail rot and more. Attacking koi when they are stressed, causing thousands of fish deaths each year. Aqua MedZyme contains 760,000,000 yes, seven hundred and sixty million hungry beneficial bacteria per ml that eat the same food as Aeromonas, Pseudomonas, which starves them to levels so low they can not harm your fish.

\n\t1.Treats pond water as low as 40°F
\n\t2.Great for early spring and fall treatments
\n\t3.Does NOT contain chemicals, antibiotics or medications
\n\t4.100% natural - safe for filters, plants, pets and wildlife
\n\t5.Formula has been tested extensively in koi ponds, commercial aquaculture applications, private veterinary laboratories and University Studies    </string>
    <string name="fish_medicine">
        "\tCelecoxib Oral Suspension.
        \n\tCelecoxib Oral Suspension.
        \n\tFluconazole Oral Suspension.
        \n\tAmikacin Injection Solution.
        \n\tMetronidazole Oral Suspension.
        \n\tCalcium Glubionate Oral Syrup.
        \n\tAmphotericin B Oral Suspension.
        \n\tCiprofloxacin Oral Oil Suspension.  "</string>
    <string name="rabbit_medicine">
        	Furosemide Oral Suspension.
\n\n	Amikacin Injection Solution.
\n\n	Metronidazole Oral Suspension.
\n\n	Buprenorphine Injection Solution.
\n\n	Albendazole Capsule.
\n\n	Meloxicam Oral Suspension.
\n\n	Meloxicam Oral Suspension.
\n\n	Doxycycline Oral Suspension.

 "</string>
</resources>